# orz

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/every/md/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: README  native-lib.c
app/src/main/cpp/include/libx264/: x264.h
app/src/main/cpp/liborz/: native-lib.c  native-lib.h  test.cpp  test.h
app/src/main/cpp/libx264/: x264.c
app/src/main/cpp/libx264/common/: common.h
app/src/main/cpp/libx264/encoder/: encoder.c
app/src/main/cpp/libx264/filters/: filters.h
app/src/main/cpp/libx264/filters/video/: video.h
app/src/main/cpp/libx264/input/: input.h
app/src/main/cpp/libx264/output/: output.h
app/src/main/cpp/x264_source/arm64/include/: x264.h
app/src/main/cpp/x264_source/x264/: build_android_arm.sh  build_android_arm64-v8a.sh  build_android_mips.sh  build_android_x86.sh  build_android_x86_64.sh  x264.c  x264.h  x264res.rc
app/src/main/cpp/x264_source/x264/common/: common.c  cpu.c  frame.c  macroblock.c  win32thread.c  win32thread.h
app/src/main/cpp/x264_source/x264/common/x86/: bitstream-a.asm  cabac-a.asm  const-a.asm  cpu-a.asm  dct-32.asm  dct-64.asm  dct-a.asm  deblock-a.asm  mc-a.asm  mc-a2.asm  pixel-32.asm  pixel-a.asm  predict-a.asm  quant-a.asm  sad-a.asm  sad16-a.asm  trellis-64.asm  x86inc.asm  x86util.asm
app/src/main/cpp/x264_source/x264/encoder/: encoder.c  set.c
app/src/main/cpp/x264_source/x264/filters/video/: video.c
app/src/main/cpp/x264_source/x264/input/: thread.c
app/src/main/cpp/x264_source/x264/output/: matroska.c
app/src/main/cpp/x264_source/x264/tools/: checkasm-a.asm  checkasm-aarch64.S  checkasm.c
app/src/main/java/com/every/md/: MDApplication.java
app/src/main/java/com/every/md/activity/: AndroidBaseActivity.java  LiveActivity.java  LoginActivity.java  MailActivity.java  MainActivity.java  SettingActivity.java  ToolbarImageActivity.java  ToolbarTabActivity.java  UserDetailActivity.java
app/src/main/java/com/every/md/adapter/: Fragment1RecyclerAdapter.java
app/src/main/java/com/every/md/behavior/: ScrollAwareFABBehaviorDefault.java
app/src/main/java/com/every/md/encoder/: H264Encoder.java  H264EncoderListener.java
app/src/main/java/com/every/md/fragment/: BaseFragment.java  Fragment1.java  Fragment2.java  Fragment3.java
app/src/main/java/com/every/md/http/: HttpClient.java  HttpConfig.java  (+2 more)
app/src/main/res/drawable/: btn_bg_drawer.xml  btn_bg_login.xml  btn_bg_login_facebook.xml  btn_bg_login_weibo.xml  vector_text.xml
app/src/main/res/layout/: activity_adbase.xml  activity_login.xml  activity_main.xml  activity_main_child.xml  activity_toolbar_tab.xml  activity_user_detail.xml  adapter_fragment1_recycler.xml  adapter_fragment1_recycler_load.xml  fragment_view.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: attr.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: shortcuts.xml
app/src/test/java/com/every/md/: ExampleUnitTest.java
(+6 files in other folders)
